#5719 Fix favourites not including folders